Created a Fake DB using JSON

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,20 +7,20 @@ body{
   margin-right: 5%;
 }
 /*Seller SignUp*/
-.sign-up-form{
+.common-form{
   display: flex;
   flex-direction: column;
   width: 300px;
   margin: auto;
 }
-.sign-up-input{
+.form-input{
   height: 35px;
   margin-bottom: 20px;
   border: 1px solid orange;
   padding-left: 15px;
   color: orange;
 }
-.sign-up-btn{
+.form-btn{
   height: 35px;
   border: 1px solid orange;
   color: orange;
