--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -6,7 +6,7 @@
     <input type="text" placeholder="Search for a Product">
     <button>Search</button>
   </div>
-  <ul><li><a href="#">Home</a></li></ul>
+  <ul><li><a routerLink="">Home</a></li></ul>
   <ul><li><a routerLink="seller-authentication">Seller</a></li></ul>
   <ul><li><a href="#">Cart(0)</a></li></ul>
   <ul><li><a href="#">Login</a></li></ul>
