--- a/src/app/seller-authentication/seller-authentication.html
+++ b/src/app/seller-authentication/seller-authentication.html
@@ -1,11 +1,11 @@
 <div class="seller-authentication">
   <div class="sign-up">
     <h1>Seller Sign-Up</h1>
-    <form #sellerSignUp="ngForm" class="sign-up-form">
-      <input type="text" clasz="sign-up-input" placeholder="Enter Name" name="name">
-      <input type="password" class="sign-up-input" placeholder="Enter Password" name="password">
-      <input type="text" class="sign-up-input" placeholder="Enter Email" name="email">
-      <button class="sign-up-btn">Sign Up</button>
+    <form #sellerSignUp="ngForm" (ngSubmit)="signUp(sellerSignUp.value)" class="common-form">
+      <input type="text" class="form-input" placeholder="Enter Name" name="name" ngModel>
+      <input type="password" class="form-input" placeholder="Enter Password" name="password" ngModel>
+      <input type="text" class="form-input" placeholder="Enter Email" name="email" ngModel>
+      <button class="form-btn">Sign Up</button>
     </form>
   </div>
 </div>
