--- a/src/app/seller-authentication/seller-authentication.css
+++ b/src/app/seller-authentication/seller-authentication.css
@@ -7,3 +7,20 @@
   margin-bottom:50px;
   color: orange;
 }
+.login{
+  text-align: center;
+}
+
+.login h1{
+  margin-top: 50px;
+  margin-bottom:50px;
+  color: orange;
+}
+.authentication-toggler {
+  display: block;
+  font-size: 14px;
+  margin-top: 20px;
+  text-align: left;
+  color: blue;
+  cursor: pointer;
+}
